--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <main>
         <section>
             <h2>Our services</h2>
-            <p>We offer premium slave labour for those who needs something done, our cheap and fast service will satisfy all those needs. Make sure to check our weekly offers, some are better than others!</p>
+            <p>We offer premium slave labour for those who needs something done, our cheap and fast service will satisfy all those needs. Make sure to check our weekly offers, some are better than others! We strive to have better service than our competitors</p>
         </section>
 
         <section>
