--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>slavelabour.store</title>
     <link rel="stylesheet" href="style.css">
+
+    <meta property="og:title" content="Slave Labour">
+    <meta property="og:description" content="A labour program for rich white people">
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/619532541371613195/1150683484868853760/SlaveLBlogo.png">
+    <meta property="og:url" content="slavelabour.store>
+
 </head>
 <body>
     <header>
@@ -16,7 +22,6 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="register.html">Register</a></li>
-            <!-- Add more navigation links as needed -->
         </ul>
     </nav>
 
