--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>slavelabour.store</title>
-    <link rel="stylesheet" href="style.css">
 
     <meta property="og:title" content="Slave Labour">
     <meta property="og:description" content="A labour program for rich white people">
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/619532541371613195/1150683484868853760/SlaveLBlogo.png">
-    <meta property="og:url" content="slavelabour.store>
+    <meta property="og:url" content="slavelabour.store">
+
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>slavelabour.store</title>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
