--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
 
-    <meta content="Embed Title" property="og:title" />
-    <meta content="Site Description" property="og:description" />
-    <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
-    <meta content="https://embed.com/embedimage.png" property="og:image" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Slave Labour" />
+    <meta property="og:description" content="website description" />
+    <meta property="og:url" content="website url" />
+    <meta property="og:image" content="SL.store\public\SlaveLBlogo.png"/>
 
-
+    <link rel="icon" href="favicon.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>slavelabour.store</title>
