--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta property="og:url" content="website url" />
     <meta property="og:image" content="SL.store\public\SlaveLBlogo.png"/>
 
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="https://i.ibb.co/0jF4scH/Slave-LBlogo.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>slavelabour.store</title>
