--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 
     <meta property="og:type" content="website">
     <meta property="og:title" content="Slave Labour" />
-    <meta property="og:description" content="website description" />
-    <meta property="og:url" content="website url" />
-    <meta property="og:image" content="SL.store\public\SlaveLBlogo.png"/>
+    <meta property="og:description" content="An easy to use slave program for rich white men! Sign up now!" />
+    <meta property="og:url" content="https://www.slavelabour.store" />
+    <meta property="og:image" content="https://i.ibb.co/0jF4scH/Slave-LBlogo.png"/>
 
     <link rel="icon" href="https://i.ibb.co/0jF4scH/Slave-LBlogo.png" type="image/png">
     <meta charset="UTF-8">
