--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
 
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="Slave Labour" />
-    <meta property="og:description" content="An easy to use slave program for rich white men! Sign up now!" />
-    <meta property="og:url" content="https://www.slavelabour.store" />
-    <meta property="og:image" content="https://i.ibb.co/0jF4scH/Slave-LBlogo.png"/>
+    <meta property="og:title" content="Your Website Title">
+    <meta property="og:description" content="A brief description of your website">
+    <meta property="og:image" content="https://i.ibb.co/0jF4scH/Slave-LBlogo.png">
+    <meta property="og:url" content="URL_to_your_website">
 
     <link rel="icon" href="https://i.ibb.co/0jF4scH/Slave-LBlogo.png" type="image/png">
     <meta charset="UTF-8">
