--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
 
-    <meta property="og:title" content="Your Website Title">
-    <meta property="og:description" content="A brief description of your website">
-    <meta property="og:image" content="https://i.ibb.co/0jF4scH/Slave-LBlogo.png">
-    <meta property="og:url" content="URL_to_your_website">
+    <title>Slave Labour</title>
+    <meta content="Slave Labour" property="og:title" />
+    <meta content="An award winning slave program for rich white men! Sign up now!" property="og:description" />
+    <meta content="https://slavelabour.store/" property="og:url" />
+    <meta content="https://i.ibb.co/0jF4scH/Slave-LBlogo.png" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
     <link rel="icon" href="https://i.ibb.co/0jF4scH/Slave-LBlogo.png" type="image/png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>slavelabour.store</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
