--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta content="An award winning slave program for rich white men! Sign up now!" property="og:description" />
     <meta content="https://slavelabour.store/" property="og:url" />
     <meta content="https://i.ibb.co/0jF4scH/Slave-LBlogo.png" property="og:image" />
-    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
+    <meta content="#ffffff" data-react-helmet="true" name="theme-color" />
+    <meta name="twitter:card" content="summary_large_image">
 
     <link rel="icon" href="https://i.ibb.co/0jF4scH/Slave-LBlogo.png" type="image/png">
     <meta charset="UTF-8">
