--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 
     <title>Slave Labour</title>
     <meta content="Slave Labour" property="og:title" />
-    <meta content="An award winning slave program for rich white men! Sign up now!" property="og:description" />
+    <meta content="An easy to use labour program! We offer slaves over the world! Mostly for rich white men." property="og:description" />
     <meta content="https://slavelabour.store/" property="og:url" />
     <meta content="https://i.ibb.co/0jF4scH/Slave-LBlogo.png" property="og:image" />
     <meta content="#ffffff" data-react-helmet="true" name="theme-color" />
@@ -24,8 +24,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="login.html">Login</a></li>
-            <li><a href="register.html">Register</a></li>
+            <li><a href="introduction.html">Introduction</a></li>
         </ul>
     </nav>
 
@@ -38,10 +37,7 @@
         <section>
             <h2>Deals & more</h2>
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Our current offers</a></li>
-                <li><a href="#">News Article 2</a></li>
-                <li><a href="#">News Article 3</a></li>
-                <!-- Add more news articles as needed -->
+                <li><a href="introduction.html">An introduction to our services!</a></li>
             </ul>
         </section>
     </main>
