--- a/public/introduction.html
+++ b/public/introduction.html
@@ -31,8 +31,8 @@
     <main>
         <section>
             <center>
-                <h3>Quick introduction to our services!</h3>
-                <h3></h3>
+                <h3>A short explanation about us and how we operate!</h3>
+                <br /> 
                 <video controls width="500" autoplay>
                     <source src="movie.mp4" type="video/mp4">
                     <p>Sorry, your broswer doesn't support embedded videos. Here's the <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link to the video</a></p>
