--- a/public/deals.html
+++ b/public/deals.html
@@ -4,7 +4,7 @@
 
     <title>Slave Labour : Introduction</title>
     <meta content="Slave Labour" property="og:title" />
-    <meta content="An introduction to our services and how YOU can start using them today!" property="og:description" />
+    <meta content="Our current deals!" property="og:description" />
     <meta content="https://slavelabour.store/introduction" property="og:url" />
     <meta content="https://i.ibb.co/V3VyW5s/image-87fh-R5-B-1694417845904-raw.jpg" property="og:image" />
     <meta content="#ffffff" data-react-helmet="true" name="theme-color" />
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <h1>Introduction to us</h1>
+        <h1>Current deals</h1>
     </header>
 
     <nav>
@@ -32,12 +32,7 @@
     <main>
         <section>
             <center>
-                <h3>A short explanation about us and how we operate!</h3>
-                <br /> 
-                <video controls width="500" autoplay>
-                    <source src="movie.mp4" type="video/mp4">
-                    <p>Sorry, your broswer doesn't support embedded videos. Here's the <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link to the video</a></p>
-                </video>
+                <h3>THIS IS ACTIVELY BEING WORKED ON! CHECK BACK AT A LATER TIME</h3>
             </center>
         </section>
     </main>
