--- a/public/index.html
+++ b/public/index.html
@@ -17,16 +17,18 @@
 
 </head>
 <body>
+<center>
     <header>
         <h1>Slave Labour</h1>
     </header>
-
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="introduction.html">Introduction</a></li>
+            <li><a href="deals.html">Deals</a></li>
         </ul>
     </nav>
+</center>
 
     <main>
         <section>
