--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 
     <title>Slave Labour</title>
     <meta content="Slave Labour" property="og:title" />
-    <meta content="An easy to use labour program! We offer slaves over the world! Mostly for rich white men." property="og:description" />
+    <meta content="An easy to use labour program! We offer slaves all over the world! Mostly for rich white men." property="og:description" />
     <meta content="https://slavelabour.store/" property="og:url" />
     <meta content="https://i.ibb.co/0jF4scH/Slave-LBlogo.png" property="og:image" />
     <meta content="#ffffff" data-react-helmet="true" name="theme-color" />
