--- a/public/register.html
+++ b/public/register.html
@@ -22,19 +22,22 @@
 
     <main>
         <section>
-            <h2>Register</h2>
-            <form id="register-form" action="register.php" method="POST"> <!-- Replace "register.php" with the actual registration endpoint -->
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
-
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
-
-                <button type="submit">Register</button>
+            <div class="form-container">
+            <center>
+            <h2>Register now!</h2>
+            <form action="" method="post" enctype="multipart/form-data">
+                <input type="text" name="name" placeholder="username" class="box" required>
+                <input type="email" name="email" placeholder="email" class="box" required>
+                <input type="password" name="password" placeholder="password" class="box" required>
+                <input type="cpassword" name="cpassword" placeholder="confirm password" class="box" required>
+                <p> lol <a href=""></a></p>
+                <input type="file" class="box" accept="image/jpg, image/png, image/jpeg, image/svg, image/webp">
+                <p> lol <a href=""></a></p>
+                <input type="submit" value="register" class="btn">
+                <p>already have an account? <a href="login.html">Login now!</a></p>
             </form>
+            </center>
+            </div>
         </section>
     </main>
 
