--- a/public/register.html
+++ b/public/register.html
@@ -14,9 +14,9 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="introduction.html">Introduction</a></li>
             <li><a href="login.html">Login</a></li>
             <li><a href="register.html">Register</a></li>
-            <!-- Add more navigation links as needed -->
         </ul>
     </nav>
 
@@ -33,7 +33,7 @@
                 <p> lol <a href=""></a></p>
                 <input type="file" class="box" accept="image/jpg, image/png, image/jpeg, image/svg, image/webp">
                 <p> lol <a href=""></a></p>
-                <input type="submit" value="register" class="btn">
+                <button type="submit" value="submit" >Register</button>
                 <p>already have an account? <a href="login.html">Login now!</a></p>
             </form>
             </center>
