--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <h1>Slave Labour</h1>
+        <h1>slavelabour.store</h1>
     </header>
     <nav>
         <ul>
@@ -26,6 +26,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="introduction.html">Introduction</a></li>
             <li><a href="deals.html">Deals</a></li>
+            <li><a href="login.html">Login</a></li>
             </center>
         </ul>
     </nav>
