--- a/public/introduction.html
+++ b/public/introduction.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <h1>Introduction to us</h1>
+        <h1>slavelabour.store</h1>
     </header>
 
     <nav>
