--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Login to Your Account</h1>
+        <h1>slavelabour.store</h1>
     </header>
 
     <nav>
