--- a/public/introduction.html
+++ b/public/introduction.html
@@ -38,6 +38,14 @@
                     <source src="movie.mp4" type="video/mp4">
                     <p>Sorry, your broswer doesn't support embedded videos. Here's the <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link to the video</a></p>
                 </video>
+
+                <section>
+                    <br /> 
+                    <h2>THIS WEBSITE IS OWNED BY HELLIXARO</h2>
+                    <br /> 
+                    <p>ADD ME ON DISCORD! MY USERNAME IS "HELLIXARO"</p>
+                </section>
+
             </center>
         </section>
     </main>
