--- a/public/introduction.html
+++ b/public/introduction.html
@@ -36,7 +36,7 @@
                 <br /> 
                 <video controls width="500" autoplay>
                     <source src="movie.mp4" type="video/mp4">
-                    <p>Sorry, your broswer doesn't support embedded videos. Here's the <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link to the video</a></p>
+                    <p>Sorry, your browser doesn't support embedded videos. Here's the <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Link to the video</a></p>
                 </video>
 
                 <section>
